--- a/android-app/src/main/res/values/strings.xml
+++ b/android-app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="app_name">Sony Camera Remote Control</string>
     <string name="action_settings">Settings</string>
+    <string name="cd_shot">shot</string>
 
 </resources>
